sumo/tests/sumo/extended/vaporizer/errors/begin_empty/errors.sumo
Error: Attribute 'begin' in definition of a(n) vaporizer is empty.
Quitting (on error).
